edited digital and printed photobooth boxes to prevent overflow

--- a/src/Styles/about_us_styles.scss
+++ b/src/Styles/about_us_styles.scss
@@ -6,6 +6,8 @@
     padding: 2rem;
     background-color: #f2eeec;
     border-bottom: 4px solid #f1b179;
+    position: relative;
+    z-index: 1;
 }
 
 .hello-container,
@@ -15,6 +17,7 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    z-index: 1;
 }
 
 .hello-container h1,
@@ -23,7 +26,7 @@
     font-size: 11rem;
     color: #f1b179;
     text-shadow: 1px 1px 2px black;
-    z-index: 4;
+    z-index: 1;
     position: relative;
 }
 
@@ -37,6 +40,7 @@
     border-radius: 1rem;
     box-shadow: rgba(0, 0, 0, 0.65) 0px 10px 15px;
     font-size: 2rem;
+
 }
 
 .hello-textbox p,
@@ -99,4 +103,24 @@
 
 .explore-services-container a:hover::after {
     width: 100%;
+}
+
+.keso-logo-about-us-page { 
+    width: 18rem; 
+    border-radius: 50%;
+    position: relative;
+    bottom: 26rem;
+}
+
+
+
+.orange-circle-about-us-page { 
+    width: 35rem;         
+    height: 35rem;             
+    background-color: #f6c9a1;  
+    border-radius: 50%;         
+    position: absolute; 
+    top: 2rem;
+    left: 4rem;
+    z-index: -1;
 }
