--- a/src/Styles/gallery_page_styles.scss
+++ b/src/Styles/gallery_page_styles.scss
@@ -74,6 +74,6 @@
     border-radius: 50%;         
     position: absolute; 
     z-index: -1;
-    left: -20rem;
+    left: -19rem;
     top: 2rem;
 }
