--- a/src/Styles/services2_styles.scss
+++ b/src/Styles/services2_styles.scss
@@ -151,6 +151,7 @@
     text-shadow: 1px 1px 2px black;
     z-index: 4;
     margin-right: 20rem;
+    margin-top: -1rem;
     // margin-top: -1rem;
     position: relative;
     bottom: 3rem;
