--- a/src/Styles/services_styles.scss
+++ b/src/Styles/services_styles.scss
@@ -9,7 +9,7 @@
 .services-header-container h1 { 
     text-align: right;
     font-family: "Rouge Script", cursive;
-    font-size: 14rem;
+    font-size: 13rem;
     color: #f1b179;
     text-shadow: 1px 1px 2px black;
     z-index: 4;
@@ -23,14 +23,14 @@
 
 .star-img-1 { 
     position: relative;
-    bottom: 29rem;
-    right: 1rem;
+    bottom: 27rem;
+    right: -1rem;
 }
 
 .star-img-2 { 
     position: relative;
-    bottom: 3rem;
-    left: -1rem;
+    bottom: 1rem;
+    left: 2rem;
 }
 
 .keso-logo { 
@@ -38,8 +38,8 @@
     width: 18rem;
     border-radius: 50%;
     position: relative;
-    left: 30rem;
-    bottom: 41rem; 
+    left: 37rem;
+    bottom: 39rem; 
 }
 
 .service-options-container { 
@@ -62,7 +62,7 @@
     align-items: center;
     gap: 2.5em;
     position: relative;
-    right: 10rem;
+    right: 15rem;
     z-index: 3;
 }
 
@@ -155,12 +155,7 @@
     margin-right: 3rem;
 }
 
-.digital-photobooth-container, 
-.printed-photobooth-container { 
-    width: 100%;
-    height: 26rem;
-    // padding: 1rem;
-}
+
 
 .digital-photobooth-container,
 .printed-photobooth-container,
@@ -168,11 +163,8 @@
 .threesixty-photobooth-container { 
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     align-items: center;
     background-color: white;
-    // width: 40rem;
-    // height: 20rem;
     text-align: center;
     border-radius: 1rem;
     font-family: "Montserrat", sans-serif;
@@ -184,10 +176,7 @@
 
 }
 
-// .printed-photobooth-container { 
-//     position: relative;
-//     left: 4rem;
-// }
+
 
 .threesixty-photobooth-container { 
     margin-bottom: 2rem;
@@ -212,10 +201,18 @@
 .digital-photobooth-container p, 
 .printed-photobooth-container p { 
     max-width: 45rem;
-    // font-size: 1.5em;
-    font-size: 2rem;
-    
+    font-size: 2rem;   
 }
+
+.digital-photobooth-container, 
+.printed-photobooth-container { 
+    width: 30rem;
+    flex-shrink: 0;
+    // width: 100%;
+    // height: 26rem;
+}
+
+
 
 .magnet-photobooth-container p,
 .threesixty-photobooth-container p { 
@@ -229,8 +226,8 @@
     background-color: #f6c9a1;  
     border-radius: 50%;         
     position: absolute;         
-    top: -40rem;                
-    left: 10rem;                
+    top: -38rem;                
+    left: 17rem;                
     z-index: -1;                
     
 }
